# m

./: LICENSE  README.md  pubspec.yaml
.github/workflows/: Build.yml  Build10.0.0.yml
android/: build.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
lib/: main.dart
lib/atomic/: external_opener.dart  permission_checker.dart  responsive_sizing.dart
lib/dev_test/: chain_proxy_test.dart  delay_test_stream.dart  ipc_api_test.dart  override_test.dart  test_manager.dart
lib/providers/: app_update_provider.dart  content_provider.dart  language_provider.dart  theme_provider.dart  window_effect_provider.dart
lib/services/: app_update_service.dart  auto_start_service.dart  backup_service.dart  hotkey_service.dart  image_cache_service.dart  log_print_service.dart  path_service.dart  power_event_service.dart  single_instance_sevice.dart  system_proxy_service.dart  window_state_service.dart  windows_injector_service.dart
lib/storage/: clash_preferences.dart  preferences.dart  settings_store.dart
lib/theme/: dynamic_theme.dart
lib/tray/: tray_event.dart  tray_manager.dart
lib/ui/: basic.dart
linux/: CMakeLists.txt  TorBox.desktop
linux/runner/: my_application.cc
native/TorBox_service/: Cargo.toml
native/TorBox_service/src/: lib.rs  logger.rs  main.rs  unix_permissions.rs
native/TorBox_service/src/clash/: manager.rs
native/TorBox_service/src/ipc/: client.rs  error.rs  protocol.rs  server.rs
native/TorBox_service/src/service/: installer.rs  runner.rs
scripts/: build.dart  prebuild.dart  pubspec.yaml
windows/: CMakeLists.txt
(+213 files in other folders)
