[package]
name = "TorBoxService"
version = "1.5.2"
edition = "2024"
authors = ["TorBox Contributors"]
description = "Background service for TorBox to manage Clash core with elevated privileges"

[lib]
name = "TorBox_service"
path = "src/lib.rs"

[[bin]]
name = "TorBoxService"
path = "src/main.rs"

[dependencies]

# 序列化/反序列化
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

# 错误处理
anyhow = "^1.0"
thiserror = "^2.0"

# 异步运行时
tokio = { version = "^1", features = ["rt-multi-thread", "macros", "sync", "net", "io-util", "time", "signal"] }

# 日志
log = "^0.4"
chrono = "^0.4"
dirs = "^6.0"

# Windows Service 支持
[target.'cfg(windows)'.dependencies]
windows-service = "^0.8"
windows = { version = "^0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
] }

# Unix 权限检查和进程管理
[target.'cfg(not(windows))'.dependencies]
libc = "^0.2"
nix = { version = "^0.30.1", features = ["signal", "process"] }
